DT-2002 Lender match home page fix buttons not same width and no gap.

--- a/src/client/components/molecules/callout/callout.scss
+++ b/src/client/components/molecules/callout/callout.scss
@@ -47,6 +47,8 @@
 }
 
 .button > button{
+	width: 129px;
+	margin-bottom: 10px;
 	@include grid-media($sba-grid-small){
 		width: 100%;
 	}
